--- a/carpool-front/src/app/features/schedules/pages/schedule-detail/schedule-detail.component.html
+++ b/carpool-front/src/app/features/schedules/pages/schedule-detail/schedule-detail.component.html
@@ -33,23 +33,28 @@
           <div class="time-slot" *ngFor="let slot of timeSlots">
             <div class="time-label">{{ slot.label }}</div>
             <div class="trip-cell" *ngFor="let day of weekDays">
-              <div class="trip-content"
-                   *ngIf="getTripForSlot(schedule?.evenSchedule?.trips ?? [], day.value, slot.value) as trip; else emptyTrip">
-                <div class="driver-info">
-                  <strong>{{ trip.driver?.name }}</strong>
-                </div>
-                <div class="children-info" *ngIf="trip.children && trip.children.length > 0">
-                  <span class="children-count">{{ trip.children.length }} enfant(s)</span>
-                  <div class="children-list">
-                    <span *ngFor="let child of trip.children; let last = last">
-                      {{ child.name }}<span *ngIf="!last">, </span>
-                    </span>
+              <div class="trips-container">
+                <div class="trip-item" 
+                     *ngFor="let trip of getTripsForSlot(schedule?.evenSchedule?.trips ?? [], day.value, slot.value)">
+                  <div class="trip-content">
+                    <div class="driver-info">
+                      <strong>{{ trip.driver?.name }}</strong>
+                    </div>
+                    <div class="children-info" *ngIf="trip.children && trip.children.length > 0">
+                      <span class="children-count">{{ trip.children.length }} enfant(s)</span>
+                      <div class="children-list">
+                        <span *ngFor="let child of trip.children; let last = last">
+                          {{ child.name }}<span *ngIf="!last">, </span>
+                        </span>
+                      </div>
+                    </div>
                   </div>
                 </div>
+                
+                <div class="empty-trip" *ngIf="getTripsForSlot(schedule?.evenSchedule?.trips ?? [], day.value, slot.value).length === 0">
+                  Aucun trajet
+                </div>
               </div>
-              <ng-template #emptyTrip>
-                <div class="empty-trip">Aucun trajet</div>
-              </ng-template>
             </div>
           </div>
         </div>
@@ -65,23 +70,28 @@
           <div class="time-slot" *ngFor="let slot of timeSlots">
             <div class="time-label">{{ slot.label }}</div>
             <div class="trip-cell" *ngFor="let day of weekDays">
-              <div class="trip-content"
-                   *ngIf="getTripForSlot(schedule?.oddSchedule?.trips ?? [], day.value, slot.value) as trip; else emptyTrip">
-                <div class="driver-info">
-                  <strong>{{ trip.driver?.name }}</strong>
-                </div>
-                <div class="children-info" *ngIf="trip.children && trip.children.length > 0">
-                  <span class="children-count">{{ trip.children.length }} enfant(s)</span>
-                  <div class="children-list">
-                    <span *ngFor="let child of trip.children; let last = last">
-                      {{ child.name }}<span *ngIf="!last">, </span>
-                    </span>
+              <div class="trips-container">
+                <div class="trip-item" 
+                     *ngFor="let trip of getTripsForSlot(schedule?.oddSchedule?.trips ?? [], day.value, slot.value)">
+                  <div class="trip-content">
+                    <div class="driver-info">
+                      <strong>{{ trip.driver?.name }}</strong>
+                    </div>
+                    <div class="children-info" *ngIf="trip.children && trip.children.length > 0">
+                      <span class="children-count">{{ trip.children.length }} enfant(s)</span>
+                      <div class="children-list">
+                        <span *ngFor="let child of trip.children; let last = last">
+                          {{ child.name }}<span *ngIf="!last">, </span>
+                        </span>
+                      </div>
+                    </div>
                   </div>
                 </div>
+                
+                <div class="empty-trip" *ngIf="getTripsForSlot(schedule?.oddSchedule?.trips ?? [], day.value, slot.value).length === 0">
+                  Aucun trajet
+                </div>
               </div>
-              <ng-template #emptyTrip>
-                <div class="empty-trip">Aucun trajet</div>
-              </ng-template>
             </div>
           </div>
         </div>
