--- a/carpool-front/src/app/features/schedules/pages/schedule-edit/schedule-edit.component.html
+++ b/carpool-front/src/app/features/schedules/pages/schedule-edit/schedule-edit.component.html
@@ -51,7 +51,7 @@
         <div class="trip-cell" *ngFor="let day of weekDays">
           <div class="trips-container">
             <!-- Trajets existants -->
-            <div class="trip-item" 
+            <div class="trip-item"
                  *ngFor="let trip of getTripsForSlot(day.value, slot.value); let i = index">
               <div class="trip-content">
                 <div class="driver-info">
@@ -126,14 +126,14 @@
         <div class="form-row">
           <div class="form-group">
             <label for="weekDay">Jour</label>
-            <select id="weekDay" formControlName="weekDay" class="form-control" disabled>
+            <select id="weekDay" formControlName="weekDay" class="form-control">
               <option *ngFor="let day of weekDays" [value]="day.value">{{ day.label }}</option>
             </select>
           </div>
 
           <div class="form-group">
             <label for="timeSlot">Créneau</label>
-            <select id="timeSlot" formControlName="timeSlot" class="form-control" disabled>
+            <select id="timeSlot" formControlName="timeSlot" class="form-control">
               <option *ngFor="let slot of timeSlots" [value]="slot.value">{{ slot.label }}</option>
             </select>
           </div>
